kubernetes/ingress/ingress-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-microservices-ingress-main
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # Hide internal routes
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($request_uri ~ "^/api/hidden(/|$)(.*)") {
        return 404;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-srv
            port:
              number: 80
      - path: /api/([^/]*)
        pathType: Prefix
        backend:
          service:
            name: broker-srv
            port:
              number: 80
