kubernetes/ingress/ingress-util.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-microservices-ingress-util
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: rabbit.localhost
    http:
      paths:
      # # RabbitMQ UI
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-srv
            port:
              number: 15672
  - host: mailhog.localhost
    http:
      paths:
      # MailHog UI
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailhog-srv
            port:
              number: 8025
